# talos-7

./: .gitignore  CHANGELOG.md  README.md  test.sh
.github/workflows/: bump-firmware.yml  electron-release.yml
Hardware/EAGLE/: talos.sch
Software/Source/firmware/include/: assets_graphics.h  mock_hardware.h  tusb_config.h
Software/Source/firmware/include/cdc/: cdc_transport.h
Software/Source/firmware/src/: easter_egg.c  hardware_interface.c
Software/Source/firmware/src/cdc/: cdc_dispatcher.c  cdc_transport.c
Software/Source/firmware/tests/: CMakeLists.txt  README.md  test_cdc_cmd_write.c  test_exec_midi.c  test_hardware_interface.c  test_runner.c
Software/Source/firmware/tests/mocks/: mock_flash.h  mock_gpio.h
Software/Source/firmware/tests/unity/: unity.c  unity.h
Software/Source/web-interface/: next.config.ts  package-lock.json  vercel.json
Software/Source/web-interface/app/: page.tsx
Software/Source/web-interface/components/editor/: layer-settings-card.tsx
Software/Source/web-interface/components/layout/: KeycapButton.tsx  header.tsx  save-feedback.tsx
Software/Source/web-interface/components/macro-dialog/: button-edit-dialog.tsx
Software/Source/web-interface/components/oled/: emoji-canvas.tsx  oled-display.tsx
Software/Source/web-interface/electron/: main.js  preload.js
Software/Source/web-interface/lib/data/: hid-keycodes.ts
Software/Source/web-interface/lib/services/: serial.protocol.ts  (+2 more)
assets/board/: talos.brd
firmware/: CMakeLists.txt
firmware/include/: assets_graphics.h  cdc_protocol.h  easter_egg.h  emoji.h  firmware_config.h  firmware_version.h  font.h  hardware_interface.h  macro_config.h  macro_executor.h  oled_display.h  pin_definitions.h  tusb_config.h
firmware/include/cdc/: cdc_dispatcher.h  cdc_transport.h
firmware/include/cdc/commands/: cdc_cmd_read.h  cdc_cmd_system.h  cdc_cmd_write.h
firmware/include/executor/: macro_executor.h
firmware/include/executor/actions/: exec_midi_core.h  exec_script.h
firmware/include/oled/: oled_display.h
firmware/include/oled/screensaver/animations/: anim_breakout.h  anim_matrix.h
firmware/src/: cdc_protocol.c  hardware_interface.c  macro_config.c  macro_executor.c  main.c  mock_hardware.c  oled_display.c  usb_descriptors.c
firmware/src/cdc/: cdc_dispatcher.c  cdc_transport.c
firmware/src/cdc/commands/: cdc_cmd_read.c  cdc_cmd_system.c  cdc_cmd_write.c
firmware/src/executor/: macro_executor.c
firmware/src/executor/actions/: exec_hid_core.c  exec_midi_core.c  exec_mouse.c  exec_script.c  exec_text.c
firmware/src/oled/: oled_display.c
firmware/src/oled/screensaver/: screensaver_utils.c
firmware/src/oled/screensaver/animations/: anim_invaders.c  anim_matrix.c  anim_starfield.c
firmware/tests/: CMakeLists.txt  README.md  test_macro_config.c  test_runner.c
firmware/tests/mocks/: mock_pico.h  mock_tusb.h  mock_watchdog.h  mocks.c
web-interface/: check_serial.sh  package-lock.json  package.json  vercel.json
web-interface/app/: globals.css  layout.tsx  page.tsx
web-interface/components/device/: connection-panel.tsx
web-interface/components/editor/: configurator.tsx  device-settings-card.tsx  pcb-visualization.tsx
web-interface/components/layout/: LayerTabs.tsx
web-interface/components/macro/: ButtonEditDialog.tsx  ConnectionPanel.tsx  KeySequenceInput.tsx  KeycapButton.tsx  KeycodeDialog.tsx  LayerTabs.tsx  MacroConfigurator.tsx  MacroSlot.tsx  OLEDDisplay.tsx  PCBVisualization.tsx
web-interface/components/macro-dialog/: button-edit-dialog.tsx  key-sequence-input.tsx
web-interface/components/macro-dialog/forms/: macro-form-key-press.tsx  macro-form-mouse.tsx  macro-form-script.tsx
web-interface/components/oled/: oled-alert.tsx  oled-display.tsx
web-interface/electron/: main.js
web-interface/hooks/: usePendingChanges.ts
web-interface/lib/data/: hid-keycodes.ts
web-interface/lib/services/: serial.service.ts  serial.transport.ts  serial.utils.ts
web-interface/lib/types/: config.types.ts  macro.types.ts
web-interface/lib/utils/: config-compare.ts
(+22 files in other folders)
